# HDR_Transformer

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: CMakeLists.txt  GLAD.cbp  cmake_install.cmake
dependencies/glad/include/KHR/: khrplatform.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: base.hpp  gl.hpp
include/tone_mapping/: drago_tmo.hpp  reinhard_tmo.hpp  schlick_tmo.hpp  ward_histogram_tmo.hpp
src/: HDR-Transform.cpp
